add new handler [+] Dashbord [+] Get Monthly Report [+] Delete Defect
