# internal/app/createAgent_handler.go
@@ -14,10 +14,15 @@ func (a App) CreateAgent(ctx context.Context, req *api.Agent) (*api.ResponseWith
 		return &api.ResponseWithID{}, errors.New("access denied")
 	}
 
+	insta_username := ""
+	if req.InstagramUsername.Set {
+		insta_username = req.InstagramUsername.Value
+	}
+
 	res, err := a.agentRepo.Create(&model.Agent{
 		Fio:               req.Fio,
 		Phone:             req.Phone,
-		InstagramUsername: req.InstagramUsername,
+		InstagramUsername: insta_username,
 		BonusPercent:      uint32(req.BonusPercent),
 	})
 	if err != nil {
