# internal/app/deleteDefect_handler.go
@@ -3,43 +3,39 @@ package app
 import (
 	"context"
 	"errors"
-
 	"lignis/internal/generated/api"
 	"lignis/internal/model"
 
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
-func (a App) DeleteSale(ctx context.Context, params api.DeleteSaleParams) (*api.SuccessResponse, error) {
+func (a App) DeleteDefect(ctx context.Context, params api.DeleteDefectParams) (*api.SuccessResponse, error) {
+
 	user := ctx.Value("user").(*model.Claims)
 
-	if user.Role != "salesman" {
+	if user.Role != "manager" {
 		return &api.SuccessResponse{}, errors.New("access denied")
 	}
 
-	deletionID, err := primitive.ObjectIDFromHex(params.ID)
+	id, err := primitive.ObjectIDFromHex(params.ID)
 	if err != nil {
 		return &api.SuccessResponse{}, err
 	}
 
-	sale, err := a.saleRepo.GetByID(deletionID)
+	defect, err := a.defectRepo.GetByID(id)
 	if err != nil {
 		return &api.SuccessResponse{}, err
 	}
-
-	for _, p := range sale.Cart {
-		err = a.productRepo.Add(p.ID, p.Quantity)
+	for _, p := range defect.Defects {
+		err = a.productRepo.Add(p.ProductID, uint64(p.Quantity))
 		if err != nil {
 			return &api.SuccessResponse{}, err
 		}
 	}
-
-	err = a.saleRepo.Delete(deletionID, user.UserID)
+	err = a.defectRepo.Delete(id)
 	if err != nil {
 		return &api.SuccessResponse{}, err
 	}
+	return &api.SuccessResponse{Message: "defect deleted"}, nil
 
-	a.monthlyRepo.Operation(sale.ID.Timestamp(), -sale.TotalUSD)
-
-	return &api.SuccessResponse{Message: "sale deleted"}, nil
 }
